<resources>
    <!-- Global -->
    <string name="app_name" translatable="false">WanderShots</string>
    <string name="error_toast_text">Something went wrong</string>
    <string name="perm_needed_toast_text">Permissions required</string>
    <string name="fill_this_field">Please fill this field</string>

    <!-- Login fragment -->
    <string name="welcome_to_wandershot">Welcome to WanderShot</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="invalid_credentials_toast">Invalid credentials</string>

    <!-- Sign in fragment -->
    <string name="please_register">"Please register"</string>
    <string name="save">Save</string>
    <string name="confirm_password">Confirm password</string>
  
    <!-- Home fragment -->
    <string name="home_tab">Home</string>
    <string name="myPictures">My Walk Pictures</string>
    <string name="welcome_message">Hello %1$s !\nHappy to see you again !</string>
    <string name="distanceTraveled">Total Distance Traveled</string>
    <string name="pointUnit">pts</string>
    <string name="distanceUnit">km</string>
    <string name="engagment_label">Want to wander?</string>
    <string name="start_walk_button">Start</string>

  
    <!-- Walks history fragment -->
    <string name="walks_history_tab">Walks history</string>

    <!-- Walk fragment -->
    <string name="stop">Stop</string>
    <string name="take_picture">Take a picture</string>
    <string name="traveled">Traveled</string>
    <string name="started_at">Start</string>
    <string name="lasted">Lasted</string>
    <string name="walk_label">Name</string>
    <string name="save_walk_name">Save</string>
    <string name="position_marker">My position</string>
    <string name="speed">Speed</string>

    <!-- Picture fragment -->
    <string name="take_picture_button">Take a picture</string>
    <string name="picture_title_input">Title</string>
    <string name="save_picture_button">Save picture</string>
    <string name="error_create_picture">Error creating a file for the picture</string>
    <string name="error_no_picture">CurrentPhotoPath is null</string>
    <string name="error_read_picture">Could not read image</string>
    <string name="picture_saved">Picture saved successfuly</string>
    <string name="cancelPictureButton">Annuler</string>

</resources>