<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@color/light"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".ui.home.HomeFragment">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:id="@+id/statsCardView"
            app:cardCornerRadius="15dp"
            android:layout_margin="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/welcomeMessage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/secondary"
                    android:padding ="10dp"
                    android:gravity="center"
                    android:text="@string/welcome_message" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/distanceTraveledTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/distanceTraveled"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/secondary" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/distanceTraveledValue"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="32dp"
                        android:gravity="center"
                        android:layout_margin="10dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textColor="@color/black"
                        android:layout_weight="2" />

                    <TextView
                        android:id="@+id/distanceTraveledUnit"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_margin="10dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/black"
                        android:layout_weight="1"
                        android:layout_marginStart="8dp"
                        android:text="@string/distanceUnit" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:id="@+id/placesCardView"
            app:cardCornerRadius="15dp"
            android:layout_margin="8dp" >

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingVertical="8dp"
                android:paddingStart="24dp"
                android:paddingEnd="32dp">

            <TextView
                    android:id="@+id/myPictures"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/myPictures"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/secondary" />

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/carousel_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="196dp"
                    android:clipChildren="false"
                    android:clipToPadding="false" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

        <TextView
                android:text="@string/engagment_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_weight="4"
                android:layout_gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Button

            android:id="@+id/start_walk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="4"
            android:backgroundTint="@color/primary"
            android:text="@string/start_walk_button"
            app:cornerRadius="10dp" />
    </LinearLayout>

</LinearLayout>