<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@color/light"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".ui.home.HomeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/DestinationCardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1.4"
        app:cardBackgroundColor="@color/light"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="10dp"
            android:text="@string/my_position"
            android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
            android:textColor="@color/secondary" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/destination"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="200 rue de César, Rome"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/primary" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/WalkingInfoCardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="3.5"
        app:cardBackgroundColor="@color/light"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="78dp"
            android:layout_marginTop="7dp"
            android:text="@string/started_at"
            android:textColor="@color/secondary" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/rounded_shape"
            android:gravity="center"
            android:text="hh:mm"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="255dp"
            android:layout_marginTop="7dp"
            android:text="@string/traveled"
            android:textColor="@color/secondary" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_marginStart="210dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/rounded_shape"
            android:gravity="center"
            android:text="0000 m"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="78dp"
            android:layout_marginTop="92dp"
            android:text="@string/lasted"
            android:textColor="@color/secondary" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="110dp"
            android:background="@drawable/rounded_shape"
            android:gravity="center"
            android:text="hh:mm"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/primary" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="262dp"
            android:layout_marginTop="92dp"
            android:text="@string/pace"
            android:textColor="@color/secondary" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_marginStart="210dp"
            android:layout_marginTop="110dp"
            android:background="@drawable/rounded_shape"
            android:gravity="center"
            android:text="xx.x km/h"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/primary" />
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="4.5">

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.6"
        android:weightSum="2">

        <Button
            android:id="@+id/take_pic"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/take_picture"
            android:backgroundTint="@color/primary"/>

        <Button
            android:id="@+id/stop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/stop_red"
            android:text="@string/stop" />
    </LinearLayout>
</LinearLayout>
