<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:background="@color/light"
        android:orientation="vertical"
        android:weightSum="11"
        tools:context=".ui.home.HomeFragment"
        android:id="@+id/constraintLayout4">


    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/statsCardView"
            app:cardCornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout3">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="8dp"
                android:paddingStart="24dp"
                android:paddingEnd="32dp">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="false"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="@color/primary"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/picture_title_input">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:inputType="text|textEmailAddress"
                        android:textColorLink="@color/secondary"
                        android:outlineProvider="none"
                        android:id="@+id/pictureTitleInput" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    app:cornerRadius="10dp"
                    android:backgroundTint="@color/primary"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="@string/take_picture_button"
                    android:id="@+id/takePictureButton" />

            <ImageView
                    android:id="@+id/pictureImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:id="@+id/constraintLayout3"
            app:layout_constraintTop_toBottomOf="@+id/statsCardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp">

        <Button
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                app:cornerRadius="10dp"
                android:backgroundTint="@color/stop_red"
                android:id="@+id/cancelPictureButton"
                android:text="@string/cancelPictureButton"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toStartOf="@+id/savePictureButton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="8dp" />

        <Button
                android:layout_width="128dp"
                android:layout_height="0dp"
                app:cornerRadius="10dp"
                android:backgroundTint="@color/primary"
                android:id="@+id/savePictureButton"
                android:text="@string/save_picture_button"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/cancelPictureButton"
                android:enabled="false" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>